--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             }
 
             // Enumerate ids of the layers.
-            const toggleableLayerIds = ['uw', 'lgbtq'];
+            const toggleableLayerIds = ['seahawks', 'TransitStops'];
 
             // Set up the corresponding toggle button for each layer.
             for (const id of toggleableLayerIds) {
