--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
                 'tileSize': 256,
                 'attribution': 'Map tiles designed by Edward Park'
             });
+
+            map.addSource('Transpo&Roadways-tiles', {
+                'type': 'raster',
+                'tiles': [
+                    'assets/transpoXroadways/{z}/{x}/{y}.png'
+                ],
+                'tileSize': 256,
+                'attribution': 'Map tiles designed by Edward Park</a>'
+            });
             
             map.addLayer({
                 'id': 'seahawks',
@@ -137,18 +146,27 @@
                 },
                 'source': 'SeahawksxTransitStops-tiles'
             });
+
+            map.addLayer({
+                'id': 'Transpo&Roadways',
+                'type': 'raster',
+                'layout': {
+                    'visibility': 'none'
+                },
+                'source': 'Transpo&Roadways-tiles'
+            });
         });
 
 
         // After the last frame rendered before the map enters an "idle" state.
         map.on('idle', () => {
             // If these two layers were not added to the map, abort
-            if (!map.getLayer('seahawks') || !map.getLayer('TransitStops') || !map.getLayer('SeahawksxTransitStops')) {
+            if (!map.getLayer('seahawks') || !map.getLayer('TransitStops') || !map.getLayer('SeahawksxTransitStops') || map.getLayer('Transpo&Roadways')) {
                 return;
             }
 
             // Enumerate ids of the layers.
-            const toggleableLayerIds = ['seahawks', 'TransitStops','SeahawksxTransitStops'];
+            const toggleableLayerIds = ['Seahawks', 'TransitStops','SeahawksxTransitStops', 'Transpo&Roadways'];
 
             // Set up the corresponding toggle button for each layer.
             for (const id of toggleableLayerIds) {
